--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-top-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Marketplace Listing Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
