--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
   }
 }
 </script>
+<style>
+  @media print {
+    body, html {
+      background-color: #fff !important;
+    }
+    .printable-area {
+      display: block !important;
+    }
+    .non-printable {
+      display: none !important;
+    }
+    .printable-area {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: auto;
+      padding: 2rem;
+      box-shadow: none !important;
+      border: none !important;
+    }
+    .dark .printable-area * {
+        color: #000 !important;
+        background-color: transparent !important;
+    }
+  }
+</style>
 </head>
   <body class="bg-gray-100 dark:bg-dark">
     <div id="root"></div>
