feat: Implement comprehensive listing management and export
This commit introduces robust functionality for managing generated product listings. It includes:

- **CRUD Operations:** Users can now create, view, search, sort, update, and delete their listings.
- **Advanced Exporting:** Listings can be downloaded in various formats: PDF, DOC, TXT, JSON, CSV, and SQL.
- **Print/PDF Generation:** Integrates `html2canvas` and `jspdf` to enable exporting listings as printable PDFs.
- **Image Capture:** Adds support for capturing product images directly via the system or a USB camera.
- **UI Enhancements:** Updates the README and application components to reflect the new features and improve user experience.

These changes significantly enhance the utility and data management capabilities of the AI Marketplace Listing Generator.

--- a/index.html
+++ b/index.html
@@ -19,44 +19,46 @@
         }
       }
     </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
-  }
-}
-</script>
-<style>
-  @media print {
-    body, html {
-      background-color: #fff !important;
-    }
-    .printable-area {
-      display: block !important;
-    }
-    .non-printable {
-      display: none !important;
-    }
-    .printable-area {
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: auto;
-      padding: 2rem;
-      box-shadow: none !important;
-      border: none !important;
-    }
-    .dark .printable-area * {
-        color: #000 !important;
-        background-color: transparent !important;
-    }
-  }
-</style>
-</head>
+    <script type="importmap">
+      {
+        "imports": {
+          "react": "https://aistudiocdn.com/react@^19.1.1",
+          "react/": "https://aistudiocdn.com/react@^19.1.1/",
+          "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+        }
+      }
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <style>
+      @media print {
+        body, html {
+          background-color: #fff !important;
+        }
+        .printable-area {
+          display: block !important;
+        }
+        .non-printable {
+          display: none !important;
+        }
+        .printable-area {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: auto;
+          padding: 2rem;
+          box-shadow: none !important;
+          border: none !important;
+        }
+        .dark .printable-area * {
+            color: #000 !important;
+            background-color: transparent !important;
+        }
+      }
+    </style>
+  </head>
   <body class="bg-gray-100 dark:bg-dark">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
