feat: Integrate Zustand for state management
Refactors the application to use Zustand for managing global state, replacing direct React state management. This simplifies state synchronization across components and improves maintainability.

Also includes updates to import maps to accommodate the new dependency.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
       }
     </script>
     <script type="importmap">
-      {
-        "imports": {
-          "react": "https://aistudiocdn.com/react@^19.1.1",
-          "react/": "https://aistudiocdn.com/react@^19.1.1/",
-          "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
-          "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
-        }
-      }
-    </script>
+{
+  "imports": {
+    "react": "https://aistudiocdn.com/react@^19.1.1",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "zustand": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/index.mjs",
+    "zustand/middleware": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/middleware.mjs",
+    "use-sync-external-store/shim/with-selector.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/with-selector.mjs",
+    "use-sync-external-store/shim/index.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/index.mjs",
+    "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/"
+  }
+}
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
