--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Basic Tailwind configuration
+      // Basic Tailwind configuration to extend the default theme.
       tailwind.config = {
         theme: {
           extend: {
@@ -23,8 +23,9 @@
     </script>
     <!-- 
       Import Map for browser-native ES Modules.
-      This tells the browser where to find modules when it sees an `import` statement.
-      This allows the app to run without a build step (like Vite or Webpack).
+      This tells the browser where to find modules when it sees an `import` statement
+      (e.g., `import React from 'react'`). This allows the app to run without a 
+      build step or bundler like Vite or Webpack.
     -->
     <script type="importmap">
 {
@@ -41,7 +42,7 @@
   }
 }
 </script>
-    <!-- CDN scripts for PDF generation functionality -->
+    <!-- CDN scripts for PDF generation functionality (jsPDF and html2canvas) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- Print-specific styles to ensure only the listing is printed -->
@@ -75,6 +76,7 @@
   </head>
   <body class="bg-gray-100 dark:bg-dark">
     <div id="root"></div>
+    <!-- The main entry point for the React application. -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
