feat: Update zustand to latest patch version
Downgrades zustand from v5.0.8 to v4.5.2 to align with project dependencies and CDN paths. This ensures compatibility and resolves potential issues with older versions of React.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     "zustand": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/index.mjs",
     "zustand/middleware": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/middleware.mjs",
     "use-sync-external-store/shim/with-selector.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/with-selector.mjs",
-    "use-sync-external-store/shim/index.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/index.mjs",
-    "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/"
+    "use-sync-external-store/shim/index.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/index.mjs"
   }
 }
 </script>
