refactor: Update dependencies and imports for modals
Changes package.json and index.html to reflect updated library versions and CDN paths.
Replaces 'SaveAsModal' component with 'ExportModal' and updates related logic in App.tsx and ListingPreview.tsx to rename and adjust functionality.
Updates geminiService.ts to use the correct import for GenerateContentResponse and adjusts the Gemini API call for better compatibility.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
     <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "zustand": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/index.mjs",
-    "zustand/middleware": "https://cdn.jsdelivr.net/npm/zustand@4.5.2/esm/middleware.mjs",
-    "use-sync-external-store/shim/with-selector.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/with-selector.mjs",
-    "use-sync-external-store/shim/index.js": "https://cdn.jsdelivr.net/npm/use-sync-external-store@1.2.0/esm/shim/index.mjs",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@0.12.0",
+    "zustand": "https://esm.sh/zustand@4.5.2",
+    "zustand/middleware": "https://esm.sh/zustand@4.5.2/middleware",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/"
   }
 }
